--- a/EyoBiometricApp.csproj
+++ b/EyoBiometricApp.csproj
@@ -209,6 +209,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Eyo Biometric.ico" />
+    <Content Include="Resources\biometric.sql" />
+    <Content Include="Resources\digitalPersonaClient.Setup64.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
